# Mediaserver-Python

./: .gitignore  README.md  Taskfile.yml  features.txt  main.py  mainjekyll.py  mainrhs.py  opencv.py  pyproject.toml  requirements.txt  updatejekyll.sh  vlctest.py
Anderes/: sacnlibrary-example.py
MA Fixtureprofiles/: paul_hermann@pi_medienserver_rocky@04.xml
archive/v1_rhs/: config.txt  mainrhs.py
config/: config.txt  install.sh  mediaserver.service  setup-watchdog.sh
fixtures/: paul_hermann@pi_medienserver_jekyll@03.xml
src/pi_mediaserver/: __init__.py  config.py  dmx.py  logging_config.py  main.py  ndi.py  player.py  web.py
tests/: test_config.py  test_dmx.py  test_server.py  test_web.py
